# embedded-projects

./: .gitignore  shell.nix
andreas/: andreas.c
anzeige-andreas/: Makefile
asm/: Makefile  config.mk  test.asm
binary-clock/: Makefile
binaryclock/: main.c
blink/: Makefile  config.mk  main.c
esp8266/blink/: Makefile  blink.ino
examples/USART/: USART.c  config.mk  main.c
led-matrix/: animations.c  ledMatrix.c  pinDefinition.h
led-matrix/scripts/: abc.txt  abcMaker.py
ledMatrix/: Makefile  animations.h
makefiles/: Makefile  shell.nix
mama/: Makefile  alphabet.h  main.c
max7219/: config.mk  main.c  tags
max7219/old/: alphabet.h
neoring/: .vim-run  Makefile  colors.h  config.mk  main.c  tags
neoring-with-lib/: Makefile  RGB_blinky.c  config.mk  main.c  set_fuses.sh
neoring-with-lib/alien/: config.mk  main.c
rpi-pico/: .gitignore  CMakeLists.txt  Makefile  build.sh  flash.sh  shell.nix
rpi-pico/blink/: CMakeLists.txt  blink.c
rpi-pico/mouse/: CMakeLists.txt  main.c
tests/avr-an-introduction/blinki/: .vimrc.local  config.mk  main.asm  main.c
tests/avr-an-introduction/program-a/: config.mk  main.asm
tests/avr-an-introduction/program-b/: main.asm
tests/blink/: config.mk  main.c
timer-sandra/: organ.c
timerSandra/: pinDefinition.h  tempo.h  timerSandra.c
wild/: main.c
ws2812/: config.mk  main.c  ws2812.h
zelda-music-box/: serialOrgan.c  tempo.h
zelda-music-box/python/: tabtonotesTerminalApp.py
zeldaMusicBox/: README.txt  organ.c  organ.h  pinDefinition.h  scale16.h
zeldaMusicBox/python/: tabToNotes.py
(+13 files in other folders)
